# jpaddison-net

./: .gitignore  README.md
manifests/: certificate.yaml  ingress.yaml  mianju-deployment.yaml  mianju-service.yaml  ziwo-deployment.yaml  ziwo-service.yaml
mianju/: Dockerfile  package.json  tsconfig.json
mianju/components/: Layout.tsx  Nav.tsx  WrappedLink.tsx
mianju/lib/: routes.ts  theme.ts  utils.ts
mianju/pages/: _app.tsx  _document.tsx  guest-book.tsx  index.tsx
ziwo/: Cargo.toml  Dockerfile
ziwo/migrations/2020-08-16-112623_create_guest_book/: down.sql  up.sql
ziwo/src/: lib.rs  main.rs  models.rs  schema.rs
