[package]
name = "ziwo"
version = "0.1.0"
authors = ["JP Addison <johnpaddison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
actix-web = "2.0"
actix-rt = "1.0"
dotenv = "0.15.0"
anyhow = "1.0.32"
thiserror = "1.0.20"
chrono = "0.4.13"
