[package]
name = "ziwo"
version = "0.1.0"
authors = ["JP Addison <johnpaddison@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
actix-web = "2.0"
actix-rt = "1.0"
actix = "0.9.0"
actix-cors = "0.2.0"
dotenv = "0.15.0"
anyhow = "1.0.32"
thiserror = "1.0.20"
chrono = "0.4.13"
listenfd = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
